@@ -41,6 +41,18 @@
       <artifactId>spring-boot-actuator</artifactId>
     </dependency>
 
+     <!--skltp-->
+    <dependency>
+      <groupId>se.skltp.hsa-cache</groupId>
+      <artifactId>hsa-cache</artifactId>
+      <version>1.0.2-SNAPSHOT</version>
+    </dependency>
+    <dependency>
+      <groupId>se.skltp.takcache</groupId>
+      <artifactId>takcache</artifactId>
+      <version>1.0-SNAPSHOT</version>
+    </dependency>
+
     <!-- Camel -->
     <dependency>
       <groupId>org.apache.camel</groupId>
@@ -99,23 +111,23 @@
 
   </dependencies>
 
-  <profiles>
-    <profile>
-      <id>jdk8-build</id>
-      <activation>
-        <jdk>8</jdk>
-      </activation>
-      <build>
-        <plugins>
-          <plugin>
-            <artifactId>maven-surefire-plugin</artifactId>
-            <version>2.21.0</version>
-            <configuration>
-              <argLine>--add-modules java.xml.bind --add-opens java.base/java.lang=ALL-UNNAMED</argLine>
-            </configuration>
-          </plugin>
-        </plugins>
-      </build>
-    </profile>
-  </profiles>
+  <!--<profiles>-->
+    <!--<profile>-->
+      <!--<id>jdk8-build</id>-->
+      <!--<activation>-->
+        <!--<jdk>8</jdk>-->
+      <!--</activation>-->
+      <!--<build>-->
+        <!--<plugins>-->
+          <!--<plugin>-->
+            <!--<artifactId>maven-surefire-plugin</artifactId>-->
+            <!--<version>2.21.0</version>-->
+            <!--&lt;!&ndash;<configuration>&ndash;&gt;-->
+              <!--&lt;!&ndash;<argLine>&#45;&#45;add-modules java.xml.bind &#45;&#45;add-opens java.base/java.lang=ALL-UNNAMED</argLine>&ndash;&gt;-->
+            <!--&lt;!&ndash;</configuration>&ndash;&gt;-->
+          <!--</plugin>-->
+        <!--</plugins>-->
+      <!--</build>-->
+    <!--</profile>-->
+  <!--</profiles>-->
 </project>
